RW: update images and style

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -51,6 +51,8 @@ table {
   border-spacing: 0;
 }
 
+
+
 /* ============================================================
   BOX SIZING & CLEARFIX
 ============================================================ */
@@ -68,20 +70,15 @@ table {
   clear: both;
 }
 
-/* ============================================================
-  HTML & BODY
-============================================================ */
 body {
   background-color: #1e1e1e;
-  color: #505050;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  /*color: #009688;*/
+  color: #333333;
+  font-family: "Roboto", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 14px;
   line-height: 1.5;
 }
 
-/* ============================================================
-  PRIMARY STRUCTURE
-============================================================ */
 .wrapper {
   width: 100%;
   margin: 0 auto;
@@ -99,146 +96,13 @@ main {
   padding: 0 20px;
 }
 
-/* ============================================================
-  INFO BAR
-============================================================ */
 .info-bar {
   padding: 5px 0;
   background-color: #1e1e1e;
   text-align: center;
-}
-.info-bar .icon {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  width: 30px;
-  height: 30px;
-  background: url("../img/core/icons-light.png");
-  background-image: url("../img/core/icons-light.svg"), none;
-}
-.info-bar .cmn-tut {
-  background-position: 0 0;
-}
-.info-bar .cmn-prev {
-  background-position: -30px 0;
-}
-.info-bar .cmn-next {
-  background-position: -60px 0;
-}
-.info-bar .cmn-download {
-  background-position: -90px 0;
-}
-.info-bar .cmn-archive {
-  background-position: -120px 0;
-}
-.info-bar .icon[data-title]:after {
-  opacity: 1;
-}
-.info-bar .icon[data-title]:hover:after {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 20px;
-  content: attr(data-title);
-  padding: 5px 10px;
-  background-color: #fff;
-  color: #000;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 12px;
-  white-space: nowrap;
+  color: #CCC;
 }
 
-/* ============================================================
-  HEADER & SITE TITLE
-============================================================ */
-/* header */
-header .branding {
-  padding: 20px 0;
-}
-header .logo {
-  margin-bottom: 20px;
-  text-align: center;
-}
-header .logo img {
-  display: inline-block;
-  vertical-align: middle;
-}
-header .social {
-  text-align: center;
-}
-header .social a {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 5px;
-  width: 30px;
-  height: 30px;
-  color: rgba(0, 0, 0, 0);
-  font-size: 0;
-  text-indent: -9999px;
-  background-size: 30px 30px;
-  background-image: url("../img/core/social-light.png");
-  background-image: url("../img/core/social-light.svg"), none;
-  background-size: 180px 30px;
-}
-header .social a.fb {
-  background-position: 0 0;
-}
-header .social a.twitter {
-  background-position: -30px 0;
-}
-header .social a.googleplus {
-  background-position: -60px 0;
-}
-header .social a.rss {
-  background-position: -90px 0;
-}
-header .social a.email {
-  background-position: -120px 0;
-}
-header .social a.search {
-  background-position: -150px 0;
-}
-header .social a:hover {
-  opacity: 0.4;
-}
-
-@media all and (min-width: 600px) {
-  header .branding {
-    padding-left: 60px;
-  }
-  header .logo {
-    margin-bottom: 0;
-    margin-left: -60px;
-    float: left;
-    width: 60px;
-    height: 60px;
-  }
-  header .logo img {
-    display: block;
-    margin: 0;
-  }
-  header .social {
-    padding: 15px 0;
-    float: right;
-    width: 100%;
-    text-align: right;
-  }
-}
-/* site title */
-.site-title {
-  padding: 5px 0;
-  background-color: black;
-  text-align: center;
-}
-.site-title h1 {
-  color: #fff;
-}
-
-/* ============================================================
-  FOOTER
-============================================================ */
 footer {
   padding: 20px 0;
 }
@@ -300,72 +164,7 @@ footer .copyright a {
     text-align: right;
   }
 }
-/* ============================================================
-  FUSION ADS
-============================================================ */
-#fusionads {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 20;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.95);
-  font-size: 12px;
-  line-height: 1.2;
-  -webkit-box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.1);
-}
 
-#fusionads .fusion-wrap {
-  display: block;
-  margin: 0 auto 10px auto;
-  width: 130px;
-}
-
-#fusionads a.fusion-text {
-  display: block;
-  color: #505050;
-}
-
-#fusionads a.fusion-img {
-  display: block;
-  margin-bottom: 10px;
-  width: 130px;
-  height: 100px;
-  background-color: #fff;
-}
-
-#fusionads a.fusion-img img {
-  display: block;
-  margin: 0 0 10px 0;
-}
-
-#fusionads a.fusion-poweredby {
-  color: #1e1e1e;
-}
-#fusionads a.fusion-poweredby:hover {
-  color: black;
-}
-
-#close-fusionad {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 30;
-  width: 20px;
-  height: 20px;
-  background-color: #282828;
-  text-align: center;
-  line-height: 20px;
-  color: #fff;
-  font-size: 12px;
-  font-weight: 700;
-}
-
-/* ============================================================
-  TEXT LEVEL SEMANTICS
-============================================================ */
 a {
   text-decoration: none;
   color: #1e1e1e;
