--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,3 @@
-body {
-  color:#009688;
-}
-
-
 .logo {
   background-image: url('../img/gisida-logo.png');
   background-size: contain;
@@ -19,8 +14,10 @@ section.module:last-child {
 }
 section.module h2 {
   margin-bottom: 40px;
-  font-family: "Roboto Slab", serif;
-  font-size: 30px;
+  font-family: "Roboto", serif;
+  font-size: 26px;
+  line-height: 1.4;
+  padding-top: .5em;
 }
 section.module p {
   margin-bottom: 40px;
@@ -38,8 +35,8 @@ section.module.parallax {
   background-position: 0 0;
 }
 section.module.parallax h1 {
-  color: #1e1e1e;
-  font-size: 48px;
+  color: #009688;
+  font-size: 40px;
   line-height: 1;
   font-weight: 700;
   text-align: center;
@@ -49,12 +46,15 @@ section.module.parallax h1 {
 section.module.parallax-1 {
   background-image: url("../img/mapspots.png");
   background-color: #F7F7F7;
+  background-size: 100%;
 }
+
 section.module.parallax-2 {
   background-image: url("../img/is02.jpg");
 }
 section.module.parallax-3 {
   background-image: url("../img/mapspots.png");
+  background-color: #F7F7F7;
 }
 
 .center {
@@ -66,20 +66,22 @@ section.module.parallax-3 {
 
 @media all and (min-width: 600px) {
   section.module h2 {
-    font-size: 42px;
+    font-size: 36px;
+    line-height: 1.4;
+    padding-top: .5em;
   }
   section.module p {
     font-size: 20px;
   }
   section.module.parallax {
-    padding: 100px 0;
+    padding: 90px 0;
   }
   section.module.parallax h1 {
-    font-size: 96px;
+    font-size: 80px;
   }
 }
 @media all and (min-width: 960px) {
   section.module.parallax h1 {
-    font-size: 160px;
+    font-size: 120px;
   }
 }
