MB: update text

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -167,9 +167,9 @@ footer .copyright a {
 
 a {
   text-decoration: none;
-  color: #1e1e1e;
+  color: #009687;
 }
 
 a:hover {
-  color: black;
+  color: #009687;
 }
