--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -53,16 +53,17 @@
     font-weight: bold;
     color: #333;
     text-align: center;
-    bottom: 17%;
-    right: 10%;
     position: absolute;
+    bottom: 19%;
+    left: 50%;
+    transform: translate(-50%);
   }
 
   .donor-logos {
-    bottom: 5px;
-    right: 5px;
     position: absolute;
-    padding-right: 10px;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%);
 
     .donors {
       display: inline-block;
