--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -207,7 +207,23 @@
           }
         }
 
+        li:nth-child(2) {
+          .thumb {
+            img {
+              bottom: 6px;
+            }
+          }
+        }
+
         li:nth-child(4) {
+          .thumb {
+            img {
+              bottom: 6px;
+            }
+          }
+        }
+
+        li:nth-child(9) {
           .thumb {
             img {
               bottom: 6px;
